--- a/MedicineGuru/app/src/main/res/layout/product_list_fragment.xml
+++ b/MedicineGuru/app/src/main/res/layout/product_list_fragment.xml
@@ -13,8 +13,6 @@
         android:layout_height="fill_parent"
         android:background="#ffffff">
 
-
-
         <LinearLayout android:layout_height="40dp"
             android:layout_width="match_parent"
             android:orientation="horizontal">
@@ -29,9 +27,8 @@
                 android:id="@+id/editText"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Search"
+                android:hint="Search"
                 />
-
 
         </LinearLayout>
         <ListView
