--- a/MedicineGuru/app/src/main/res/menu/activity_main_drawer.xml
+++ b/MedicineGuru/app/src/main/res/menu/activity_main_drawer.xml
@@ -18,6 +18,11 @@
             android:title="Insert Medicine" />
 
         <item
+            android:id="@+id/nav_order"
+            android:icon="@drawable/productlist"
+            android:title="Orders" />
+
+        <item
             android:id="@+id/logout"
             android:icon="@drawable/logout"
             android:title="Logout" />
